[package]
name = "crdt-dir-ipfs"
version = "0.1.0"
edition = "2024"

[dependencies]
cid = "0.11.1"
reqwest = { version = "0.12.20", features = ["json", "multipart", "stream", "blocking", "gzip", "brotli"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1"
futures-util = "0.3.31"
tokio-util = "0.7.15"
anyhow = "1.0.98"
tokio-stream = "0.1.17"
backtrace-on-stack-overflow = "0.3.0"
